--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    font-family: "Manrope", sans-serif;
+    width: 100%;
+    height: 100%;
+
+}
 #presentation-container{
     border: 1px solid black;
+    padding: 40px 120px;
+    height: 500px;
+}
+
+#presentation{
+    position: relative;
+    top: calc(50% - 37px) ;
 }
