Seletores, Propriedades e Box Model parte 2

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ html{
     height: 100%;
 
 }
+h1{
+    font-size: 2.5rem;
+    font-weight: 800;
+}
 #presentation-container{
     border: 1px solid black;
     padding: 40px 120px;
@@ -17,5 +21,6 @@ html{
 
 #presentation{
     position: relative;
-    top: calc(50% - 37px) ;
+    width: 500px;
+    top: calc(50% - 10%) ;
 }
