--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,20 @@ h1{
     font-size: 2.5rem;
     font-weight: 800;
 }
+h2{
+    font-size: 2rem;
+    font-weight: 800;
+}
+button{
+    background-color: #F84646;
+    color: #fff;
+    border: 0;
+    width: 25vw;
+    font-size: 1rem;
+    padding: 8px 24px;
+    border-radius: 8px;
+    font-weight: 600;
+}
 #presentation-container{
     border: 1px solid black;
     padding: 40px 120px;
