--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html{
     font-family: "Manrope", sans-serif;
     width: 100%;
     height: 100%;
+    font-size: 16px;
 
 }
 h1{
@@ -30,7 +31,7 @@ button{
 #presentation-container{
  
     padding: 40px 120px;
-    height: 500px;
+    height: 50vh;
 }
 
 #presentation{
