--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ button{
     background-size: cover;
     
 }
+.background-gradient{
+    background: linear-gradient(180deg, #fff, #d9d9d9);
+}
 .h1{
     margin-bottom: 1rem;
 }
