--- a/styles.css
+++ b/styles.css
@@ -66,4 +66,10 @@ button{
 
 .container > button{
     margin-top: 2rem;
+    transition: opacity 0.5s ease-in-out, transform 0.5s .2s;
+}
+
+.container > button:hover{
+    opacity: 0.8;
+    transform: scale(1.1);
 }
