Invertendo elementos utilizando Flexbox 4

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ button{
 .article-container{
     display: flex;
 }
-.article-container:nth-child(odd){
+.article-container:nth-child(even){
     flex-direction: row-reverse;
 }
 .article-details{
