--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,13 @@ button{
 .article-container:nth-child(even) > .article-details{
     margin: 0 0 0 2.5rem;
 }
+
+.footer-list{
+    display: flex;
+    text-align: left;
+    
+}
+
+.footer-list > ul > li{
+   list-style: none;
+}
