--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ h2{
     font-size: 2rem;
     font-weight: 800;
 }
+h3{
+    font-size: 1.5rem;
+    font-weight: 800;
+}
 button{
     background-color: #F84646;
     color: #fff;
@@ -143,5 +147,9 @@ button{
  .grid-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    gap: 5rem;
+ }
+ 
+ .grid-item > h3{
+    margin-top: 1.5rem;
  }
