--- a/styles.css
+++ b/styles.css
@@ -163,3 +163,34 @@ button{
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
 }
+
+.company-1{
+    grid-area: 3 / 1;
+}
+.company-2{
+    grid-area: 2 / 2;
+}
+.company-3{
+    grid-area: 3 / 2;
+}
+
+.company-4{
+    grid-area: 1 / 3;
+}
+.company-5{
+    grid-area: 2 / 3;
+}
+.company-6{
+    grid-area: 3 / 3;
+}
+
+
+.company-7{
+    grid-area: 3 / 1;
+}
+.company-8{
+    grid-area: 2 / 2;
+}
+.company-9{
+    grid-area: 3 / 2;
+}
