--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ button{
     margin-top: 1.5rem;
  }
  .grid-p{
-    margin-bottom: 6rem;
+    margin-bottom: 2rem;
  }
 
 
@@ -162,10 +162,12 @@ button{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    background-color: #F4F5F7;
 }
 
 .company-1{
-    grid-area: 3 / 1;
+    grid-area: 1 / 3;
+   
 }
 .company-2{
     grid-area: 2 / 2;
@@ -175,7 +177,7 @@ button{
 }
 
 .company-4{
-    grid-area: 1 / 3;
+    grid-area: 3 / 1;
 }
 .company-5{
     grid-area: 2 / 3;
