--- a/styles.css
+++ b/styles.css
@@ -197,12 +197,19 @@ button{
     grid-area: 3 / 5;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+    h1{
+        font-size: 3.5rem;
+    }
+
+}
+
 @media only screen and (max-width: 768px){
     h1{
         font-size: 4rem;
      
     }
     p{
-        font-size: 1.5rem;
+        font-size: 2.5rem;
     }
 }
