--- a/styles.css
+++ b/styles.css
@@ -196,20 +196,31 @@ button{
 .company-9{
     grid-area: 3 / 5;
 }
-
+/* pra tablet */
 @media only screen and (min-width: 768px) and (max-width: 1024px){
     h1{
         font-size: 3.5rem;
     }
+    h2{
+        font-size: 2rem;
+    }
+    .grid-container{
+        grid-template-columns: repeat(2, 1fr);
+     }
+     
 
 }
+/* pra mobile */
 
 @media only screen and (max-width: 768px){
     h1{
-        font-size: 4rem;
+        font-size: 2.5rem;
      
     }
-    p{
-        font-size: 2.5rem;
+    h2{
+        font-size: 1.5rem;
     }
+    .grid-container{
+        grid-template-columns: 1fr;
+     }
 }
