--- a/styles.css
+++ b/styles.css
@@ -231,4 +231,16 @@ button{
         transform: rotate(90deg);
         margin: 2.5rem 0;
     }
+    .article-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .article-container:nth-child(even){
+        display: flex;
+        flex-direction: column;
+    }
+    
 }
