conceito sobre Media Queries 3

--- a/styles.css
+++ b/styles.css
@@ -235,12 +235,24 @@ button{
         display: flex;
         flex-direction: column;
         align-items: center;
-        text-align: center;
     }
-
+    
     .article-container:nth-child(even){
         display: flex;
         flex-direction: column;
+    }
+    
+    .article-details {
+        text-align: center;
+        align-items: center;
+
+    }
+    button{
+        width: 30vw;
+        display: flex;
+        justify-content: center;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
     
 }
