--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,19 @@ h1{
     font-weight: 800;
 }
 h2{
-    font-size: 2rem;
+    font-size: 4.3rem;
     font-weight: 800;
 }
 h3{
     font-size: 1.5rem;
     font-weight: 800;
+}
+.p{
+    font-size: 1.3rem;
+    width: 40vw;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
 }
 button{
     background-color: #F84646;
@@ -28,7 +35,7 @@ button{
     border: 0;
     width: 14vw;
     font-size: 1rem;
-    padding: 8px 24px;
+    padding: 0.7rem;
     border-radius: 8px;
     font-weight: 600;
 }
