--- a/styles.css
+++ b/styles.css
@@ -96,10 +96,16 @@ button{
     transform: scale(1.1);
 }
 
+
 .background-red{
     background-color: #F84646;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
 }
+
+
 
 .article-container{
     display: flex;
@@ -140,13 +146,16 @@ button{
 
 .footer-list{
     display: flex;
+    justify-content: space-evenly;
     text-align: left;
+    gap: 8rem;
     
 }
 
 .footer-list > ul > li{
    list-style: none;
    margin-bottom: 1rem;
+   
 }
 .footer-list > ul > li:last-child{
     margin-bottom: 0;
